site/content/en/v0.20/docs/reference/kueue-config.v1beta2.md
---
title: Kueue Configuration v1beta2 API
content_type: tool-reference
package: config.kueue.x-k8s.io/v1beta2
auto_generated: true
description: Generated API reference documentation for config.kueue.x-k8s.io/v1beta2.
---


## Resource Types 


- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)
  

## `Configuration`     {#config-kueue-x-k8s-io-v1beta2-Configuration}
    


<p>Configuration is the Schema for the kueueconfigurations API</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
<tr><td><code>apiVersion</code><br/>string</td><td><code>config.kueue.x-k8s.io/v1beta2</code></td></tr>
<tr><td><code>kind</code><br/>string</td><td><code>Configuration</code></td></tr>
    
  
<tr><td><code>namespace</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Namespace is the namespace in which kueue is deployed. It is used as part of DNSName of the webhook Service.
If not set, the value is set from the file /var/run/secrets/kubernetes.io/serviceaccount/namespace
If the file doesn't exist, default value is kueue-system.</p>
</td>
</tr>
<tr><td><code>ControllerManager</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerManager"><code>ControllerManager</code></a>
</td>
<td>(Members of <code>ControllerManager</code> are embedded into this type.)
   <p>ControllerManager returns the configurations for controllers</p>
</td>
</tr>
<tr><td><code>manageJobsWithoutQueueName</code> <B>[Required]</B><br/>
<code>bool</code>
</td>
<td>
   <p>ManageJobsWithoutQueueName controls whether or not Kueue reconciles
jobs that don't set the label kueue.x-k8s.io/queue-name.
If set to true, then those jobs will be suspended and never started unless
they are assigned a queue and eventually admitted. This also applies to
jobs created before starting the kueue controller.
Defaults to false; therefore, those jobs are not managed and if they are created
unsuspended, they will start immediately.</p>
</td>
</tr>
<tr><td><code>managedJobsNamespaceSelector</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#labelselector-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.LabelSelector</code></a>
</td>
<td>
   <p>ManagedJobsNamespaceSelector provides a namespace-based mechanism to exempt jobs
from management by Kueue.</p>
<p>It provides a strong exemption for the Pod-based integrations (pod, deployment, statefulset, etc.),
For Pod-based integrations, only jobs whose namespaces match ManagedJobsNamespaceSelector are
eligible to be managed by Kueue.  Pods, deployments, etc. in non-matching namespaces will
never be managed by Kueue, even if they have a kueue.x-k8s.io/queue-name label.
This strong exemption ensures that Kueue will not interfere with the basic operation
of system namespace.</p>
<p>For all other integrations, ManagedJobsNamespaceSelector provides a weaker exemption
by only modulating the effects of ManageJobsWithoutQueueName.  For these integrations,
a job that has a kueue.x-k8s.io/queue-name label will always be managed by Kueue. Jobs without
a kueue.x-k8s.io/queue-name label will be managed by Kueue only when ManageJobsWithoutQueueName is
true and the job's namespace matches ManagedJobsNamespaceSelector.</p>
</td>
</tr>
<tr><td><code>internalCertManagement</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-InternalCertManagement"><code>InternalCertManagement</code></a>
</td>
<td>
   <p>InternalCertManagement is configuration for internalCertManagement</p>
</td>
</tr>
<tr><td><code>waitForPodsReady</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-WaitForPodsReady"><code>WaitForPodsReady</code></a>
</td>
<td>
   <p>WaitForPodsReady is configuration to provide a time-based all-or-nothing
scheduling semantics for Jobs, by ensuring all pods are ready (running
and passing the readiness probe) within the specified time. If the timeout
is exceeded, then the workload is evicted.</p>
</td>
</tr>
<tr><td><code>clientConnection</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ClientConnection"><code>ClientConnection</code></a>
</td>
<td>
   <p>ClientConnection provides additional configuration options for Kubernetes
API server client.</p>
</td>
</tr>
<tr><td><code>integrations</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-Integrations"><code>Integrations</code></a>
</td>
<td>
   <p>Integrations provide configuration options for AI/ML/Batch frameworks
integrations (including K8S job).</p>
</td>
</tr>
<tr><td><code>multiKueue</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-MultiKueue"><code>MultiKueue</code></a>
</td>
<td>
   <p>MultiKueue controls the behaviour of the MultiKueue AdmissionCheck Controller.</p>
</td>
</tr>
<tr><td><code>fairSharing</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-FairSharing"><code>FairSharing</code></a>
</td>
<td>
   <p>FairSharing controls the Fair Sharing semantics across the cluster.</p>
</td>
</tr>
<tr><td><code>admissionFairSharing</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-AdmissionFairSharing"><code>AdmissionFairSharing</code></a>
</td>
<td>
   <p>admissionFairSharing indicates configuration of FairSharing with the <code>AdmissionTime</code> mode on</p>
</td>
</tr>
<tr><td><code>resources</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-Resources"><code>Resources</code></a>
</td>
<td>
   <p>Resources provides additional configuration options for handling the resources.</p>
</td>
</tr>
<tr><td><code>featureGates</code> <B>[Required]</B><br/>
<code>map[string]bool</code>
</td>
<td>
   <p>FeatureGates is a map of feature names to bools that allows to override the
default enablement status of a feature. The map cannot be used in conjunction
with passing the list of features via the command line argument &quot;--feature-gates&quot;
for the Kueue Deployment.</p>
</td>
</tr>
<tr><td><code>objectRetentionPolicies</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ObjectRetentionPolicies"><code>ObjectRetentionPolicies</code></a>
</td>
<td>
   <p>ObjectRetentionPolicies provides configuration options for automatic deletion
of Kueue-managed objects. A nil value disables all automatic deletions.</p>
</td>
</tr>
<tr><td><code>visibilityServer</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-VisibilityServerConfiguration"><code>VisibilityServerConfiguration</code></a>
</td>
<td>
   <p>VisibilityServer configures the visibility server.</p>
</td>
</tr>
</tbody>
</table>

## `AdmissionFairSharing`     {#config-kueue-x-k8s-io-v1beta2-AdmissionFairSharing}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>usageHalfLifeTime</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>usageHalfLifeTime indicates the time after which the current usage will decay by a half
If set to 0, usage will be reset to 0 immediately.</p>
</td>
</tr>
<tr><td><code>usageSamplingInterval</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>usageSamplingInterval indicates how often Kueue updates consumedResources in FairSharingStatus
Defaults to 5min.</p>
</td>
</tr>
<tr><td><code>resourceWeights</code> <B>[Required]</B><br/>
<code>map[ResourceName]float64</code>
</td>
<td>
   <p>resourceWeights assigns weights to resources which then are used to calculate LocalQueue's
resource usage and order Workloads.
Defaults to 1.</p>
</td>
</tr>
</tbody>
</table>

## `ClientConnection`     {#config-kueue-x-k8s-io-v1beta2-ClientConnection}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>qps</code> <B>[Required]</B><br/>
<code>float32</code>
</td>
<td>
   <p>QPS controls the number of queries per second allowed for K8S api server
connection.</p>
<p>Setting this to a negative value will disable client-side ratelimiting.</p>
</td>
</tr>
<tr><td><code>burst</code> <B>[Required]</B><br/>
<code>int32</code>
</td>
<td>
   <p>Burst allows extra queries to accumulate when a client is exceeding its rate.</p>
</td>
</tr>
</tbody>
</table>

## `ClusterProfile`     {#config-kueue-x-k8s-io-v1beta2-ClusterProfile}
    

**Appears in:**

- [MultiKueue](#config-kueue-x-k8s-io-v1beta2-MultiKueue)


<p>ClusterProfile defines configuration for using the ClusterProfile API in MultiKueue.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>accessProviders</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ClusterProfileAccessProvider"><code>[]ClusterProfileAccessProvider</code></a>
</td>
<td>
   <p>AccessProviders defines a list of providers to obtain access to worker clusters
using the ClusterProfile API.</p>
</td>
</tr>
<tr><td><code>credentialsProviders</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ClusterProfileCredentialsProvider"><code>[]ClusterProfileCredentialsProvider</code></a>
</td>
<td>
   <p>CredentialsProviders defines a list of providers to obtain credentials of worker clusters
using the ClusterProfile API.</p>
<p>Deprecated: Use AccessProviders instead. AccessProviders and CredentialsProviders
are mutually exclusive.</p>
</td>
</tr>
</tbody>
</table>

## `ClusterProfileAccessProvider`     {#config-kueue-x-k8s-io-v1beta2-ClusterProfileAccessProvider}
    

**Appears in:**

- [ClusterProfile](#config-kueue-x-k8s-io-v1beta2-ClusterProfile)


<p>ClusterProfileAccessProvider defines an access provider in the ClusterProfile API.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Name is the name of the provider.</p>
</td>
</tr>
<tr><td><code>execConfig</code> <B>[Required]</B><br/>
<a href="https://pkg.go.dev/k8s.io/client-go/tools/clientcmd/api#ExecConfig"><code>k8s.io/client-go/tools/clientcmd/api.ExecConfig</code></a>
</td>
<td>
   <p>ExecConfig is the exec configuration to obtain credentials.</p>
</td>
</tr>
</tbody>
</table>

## `ClusterProfileCredentialsProvider`     {#config-kueue-x-k8s-io-v1beta2-ClusterProfileCredentialsProvider}
    

**Appears in:**

- [ClusterProfile](#config-kueue-x-k8s-io-v1beta2-ClusterProfile)


<p>ClusterProfileAccessProvider defines an access provider in the ClusterProfile API.</p>




## `ControllerConfigurationSpec`     {#config-kueue-x-k8s-io-v1beta2-ControllerConfigurationSpec}
    

**Appears in:**

- [ControllerManager](#config-kueue-x-k8s-io-v1beta2-ControllerManager)


<p>ControllerConfigurationSpec defines the global configuration for
controllers registered with the manager.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>groupKindConcurrency</code><br/>
<code>map[string]int</code>
</td>
<td>
   <p>GroupKindConcurrency is a map from a Kind to the number of concurrent reconciliation
allowed for that controller.</p>
<p>When a controller is registered within this manager using the builder utilities,
users have to specify the type the controller reconciles in the For(...) call.
If the object's kind passed matches one of the keys in this map, the concurrency
for that controller is set to the number specified.</p>
<p>The key is expected to be consistent in form with GroupKind.String(),
e.g. ReplicaSet in apps group (regardless of version) would be <code>ReplicaSet.apps</code>.</p>
</td>
</tr>
<tr><td><code>cacheSyncTimeout</code><br/>
<a href="https://pkg.go.dev/time#Duration"><code>time.Duration</code></a>
</td>
<td>
   <p>CacheSyncTimeout refers to the time limit set to wait for syncing caches.
Defaults to 2 minutes if not set.</p>
</td>
</tr>
</tbody>
</table>

## `ControllerHealth`     {#config-kueue-x-k8s-io-v1beta2-ControllerHealth}
    

**Appears in:**

- [ControllerManager](#config-kueue-x-k8s-io-v1beta2-ControllerManager)


<p>ControllerHealth defines the health configs.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>healthProbeBindAddress</code><br/>
<code>string</code>
</td>
<td>
   <p>HealthProbeBindAddress is the TCP address that the controller should bind to
for serving health probes
It can be set to &quot;0&quot; or &quot;&quot; to disable serving the health probe.</p>
</td>
</tr>
<tr><td><code>readinessEndpointName</code><br/>
<code>string</code>
</td>
<td>
   <p>ReadinessEndpointName, defaults to &quot;readyz&quot;</p>
</td>
</tr>
<tr><td><code>livenessEndpointName</code><br/>
<code>string</code>
</td>
<td>
   <p>LivenessEndpointName, defaults to &quot;healthz&quot;</p>
</td>
</tr>
</tbody>
</table>

## `ControllerManager`     {#config-kueue-x-k8s-io-v1beta2-ControllerManager}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>webhook</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerWebhook"><code>ControllerWebhook</code></a>
</td>
<td>
   <p>Webhook contains the controllers webhook configuration</p>
</td>
</tr>
<tr><td><code>leaderElection</code><br/>
<a href="https://pkg.go.dev/k8s.io/component-base/config/v1alpha1#LeaderElectionConfiguration"><code>k8s.io/component-base/config/v1alpha1.LeaderElectionConfiguration</code></a>
</td>
<td>
   <p>LeaderElection is the LeaderElection config to be used when configuring
the manager.Manager leader election</p>
</td>
</tr>
<tr><td><code>metrics</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerMetrics"><code>ControllerMetrics</code></a>
</td>
<td>
   <p>Metrics contains the controller metrics configuration</p>
</td>
</tr>
<tr><td><code>health</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerHealth"><code>ControllerHealth</code></a>
</td>
<td>
   <p>Health contains the controller health configuration</p>
</td>
</tr>
<tr><td><code>pprofBindAddress</code><br/>
<code>string</code>
</td>
<td>
   <p>PprofBindAddress is the TCP address that the controller should bind to
for serving pprof.
It can be set to &quot;&quot; or &quot;0&quot; to disable the pprof serving.
Since pprof may contain sensitive information, make sure to protect it
before exposing it to public.</p>
</td>
</tr>
<tr><td><code>controller</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerConfigurationSpec"><code>ControllerConfigurationSpec</code></a>
</td>
<td>
   <p>Controller contains global configuration options for controllers
registered within this manager.</p>
</td>
</tr>
<tr><td><code>tls</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-TLSOptions"><code>TLSOptions</code></a>
</td>
<td>
   <p>TLS contains TLS security settings for all Kueue API servers
(webhooks, metrics, and visibility).</p>
</td>
</tr>
</tbody>
</table>

## `ControllerMetrics`     {#config-kueue-x-k8s-io-v1beta2-ControllerMetrics}
    

**Appears in:**

- [ControllerManager](#config-kueue-x-k8s-io-v1beta2-ControllerManager)


<p>ControllerMetrics defines the metrics configs.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>bindAddress</code><br/>
<code>string</code>
</td>
<td>
   <p>BindAddress is the TCP address that the controller should bind to
for serving prometheus metrics.
It can be set to &quot;0&quot; to disable the metrics serving.</p>
</td>
</tr>
<tr><td><code>enableClusterQueueResources</code><br/>
<code>bool</code>
</td>
<td>
   <p>EnableClusterQueueResources, if true the cluster queue resource usage and quotas
metrics will be reported.</p>
</td>
</tr>
<tr><td><code>customLabels</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ControllerMetricsCustomLabel"><code>[]ControllerMetricsCustomLabel</code></a>
</td>
<td>
   <p>CustomLabels is a list of entries whose values will be added as extra
Prometheus labels on supported metrics.
A maximum of 6 labels are allowed per SourceKind (2 for Workloads), with up to 20 labels defined in total.</p>
</td>
</tr>
<tr><td><code>localQueueMetrics</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-LocalQueueMetrics"><code>LocalQueueMetrics</code></a>
</td>
<td>
   <p>LocalQueueMetrics is a configuration that provides LocalQueue metrics options.</p>
</td>
</tr>
</tbody>
</table>

## `ControllerMetricsCustomLabel`     {#config-kueue-x-k8s-io-v1beta2-ControllerMetricsCustomLabel}
    

**Appears in:**

- [ControllerMetrics](#config-kueue-x-k8s-io-v1beta2-ControllerMetrics)


<p>ControllerMetricsCustomLabel defines a Kubernetes label or annotation to promote
as a Prometheus metric label with a &quot;custom_&quot; prefix.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Name is the Prometheus metric label name suffix.
Prepended with &quot;custom_&quot; to form the full Prometheus label name
(e.g., &quot;team&quot; becomes &quot;custom_team&quot;).
Must contain only [a-zA-Z0-9_] characters and start with a letter.</p>
</td>
</tr>
<tr><td><code>sourceLabelKey</code><br/>
<code>string</code>
</td>
<td>
   <p>SourceLabelKey is the Kubernetes label key to read the value from.
Must be a valid Kubernetes qualified name.
Mutually exclusive with SourceAnnotationKey.
If neither is specified, defaults to Name.</p>
</td>
</tr>
<tr><td><code>sourceAnnotationKey</code><br/>
<code>string</code>
</td>
<td>
   <p>SourceAnnotationKey is the Kubernetes annotation key to read the value from.
Must be a valid Kubernetes qualified name.
Mutually exclusive with SourceLabelKey.</p>
</td>
</tr>
<tr><td><code>sourceKind</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-SourceKind"><code>SourceKind</code></a>
</td>
<td>
   <p>SourceKind is the object kind from which the label value should be sourced.
Up to 2 labels are allowed for Workloads and up to 6 for other source kinds.
Defaults to ClusterQueue.
The possible values are:</p>
<ul>
<li>Cohort</li>
<li>LocalQueue</li>
<li>ClusterQueue</li>
<li>Workload</li>
</ul>
</td>
</tr>
<tr><td><code>trackedValues</code><br/>
<code>[]string</code>
</td>
<td>
   <p>TrackedValues is a list of the label's allowed values.
When SourceKind is Workload, a closed list of 1-12 TrackedValues is required.
Non-workload source kinds can have 0-16 TrackedValues. If the list is empty, any value is allowed.
Label values not allowed by this field will be reported as &quot;kueue.x-k8s.io/<em>UNTRACKED_VALUE</em>&quot;.</p>
</td>
</tr>
</tbody>
</table>

## `ControllerWebhook`     {#config-kueue-x-k8s-io-v1beta2-ControllerWebhook}
    

**Appears in:**

- [ControllerManager](#config-kueue-x-k8s-io-v1beta2-ControllerManager)


<p>ControllerWebhook defines the webhook server for the controller.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>port</code><br/>
<code>int</code>
</td>
<td>
   <p>Port is the port that the webhook server serves at.
It is used to set webhook.Server.Port.</p>
</td>
</tr>
<tr><td><code>host</code><br/>
<code>string</code>
</td>
<td>
   <p>Host is the hostname that the webhook server binds to.
It is used to set webhook.Server.Host.</p>
</td>
</tr>
<tr><td><code>certDir</code><br/>
<code>string</code>
</td>
<td>
   <p>CertDir is the directory that contains the server key and certificate.
if not set, webhook server would look up the server key and certificate in
{TempDir}/k8s-webhook-server/serving-certs. The server key and certificate
must be named tls.key and tls.crt, respectively.</p>
</td>
</tr>
</tbody>
</table>

## `DeviceClassCapacitySource`     {#config-kueue-x-k8s-io-v1beta2-DeviceClassCapacitySource}
    

**Appears in:**

- [DeviceClassSourceConfig](#config-kueue-x-k8s-io-v1beta2-DeviceClassSourceConfig)


<p>DeviceClassCapacitySource configures capacity-based quota tracking
for devices that allow multiple allocations (KEP-5075).</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#qualifiedname-v1-resource"><code>k8s.io/api/resource/v1.QualifiedName</code></a>
</td>
<td>
   <p>Name identifies the capacity dimension to track for quota
(e.g., &quot;gpu.example.com/memory&quot;).
Must be a valid DRA QualifiedName.</p>
</td>
</tr>
<tr><td><code>driver</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Driver is the DRA driver name used to filter relevant ResourceSlices.
Must match the spec.driver field on ResourceSlice objects.
Must not exceed 63 characters.</p>
</td>
</tr>
<tr><td><code>deviceSelector</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#deviceselector-v1-resource"><code>k8s.io/api/resource/v1.DeviceSelector</code></a>
</td>
<td>
   <p>DeviceSelector scopes which devices are eligible for quota accounting.
Matches devices whose capacity dimensions should be tracked against
the quota pool.
The selector is compiled at config load time using the upstream dracel
compiler.</p>
</td>
</tr>
</tbody>
</table>

## `DeviceClassCounterSource`     {#config-kueue-x-k8s-io-v1beta2-DeviceClassCounterSource}
    

**Appears in:**

- [DeviceClassSourceConfig](#config-kueue-x-k8s-io-v1beta2-DeviceClassSourceConfig)


<p>DeviceClassCounterSource identifies where to read counter data from and which counter to track.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Name is the counter name within the device's consumesCounters
entries to track for quota. Must be a DNS label and match a counter
name published by the driver in ResourceSlice devices' consumesCounters field.
Counter set names are per-device identifiers (e.g., gpu-0-counter-set,
gpu-1-counter-set), so name matches across all counter sets
for a given driver without requiring one mapping per device.
The total length must not exceed 63 characters.</p>
</td>
</tr>
<tr><td><code>driver</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Driver is the DRA driver name used to filter relevant ResourceSlices.
Must be a lowercase DNS subdomain and match the spec.driver field on ResourceSlice objects.
The total length must not exceed 63 characters.</p>
</td>
</tr>
<tr><td><code>deviceSelector</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#deviceselector-v1-resource"><code>k8s.io/api/resource/v1.DeviceSelector</code></a>
</td>
<td>
   <p>DeviceSelector scopes which devices are eligible for counter-based
quota accounting. Typically matches a GPU model (e.g., productName)
so all partition profiles on that model share one quota pool.
Per-workload charging is determined by the workload's own
ResourceClaimTemplate selector, which narrows to the requested profile.
The selector is compiled at config load time using the upstream dracel
compiler.</p>
</td>
</tr>
</tbody>
</table>

## `DeviceClassMapping`     {#config-kueue-x-k8s-io-v1beta2-DeviceClassMapping}
    

**Appears in:**

- [Resources](#config-kueue-x-k8s-io-v1beta2-Resources)


<p>DeviceClassMapping holds device class to logical resource mappings
for Dynamic Resource Allocation support.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#resourcename-v1-core"><code>k8s.io/api/core/v1.ResourceName</code></a>
</td>
<td>
   <p>Name is referenced in ClusterQueue.nominalQuota and Workload status.
Must be a valid fully qualified name consisting of an optional DNS subdomain prefix
followed by a slash and a DNS label, or just a DNS label.
DNS labels consist of lower-case alphanumeric characters or hyphens,
and must start and end with an alphanumeric character.
DNS subdomain prefixes follow the same rules as DNS labels but can contain periods.
The total length must not exceed 253 characters.
With KueueDRAIntegration enabled it must not be <code>pods</code>; that exact name is
reserved for Kueue's internal Pod-count accounting. A qualified name such
as <code>example.com/pods</code> is allowed.
Disabling the ReservedResourceNameValidation feature gate lets such a
configuration load for an upgrade; flavor assignment still overwrites the
key with the PodSet count.</p>
</td>
</tr>
<tr><td><code>deviceClassNames</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#resourcename-v1-core"><code>[]k8s.io/api/core/v1.ResourceName</code></a>
</td>
<td>
   <p>DeviceClassNames enumerates the DeviceClasses represented by this resource name.
Each device class name must be a valid qualified name consisting of an optional DNS subdomain prefix
followed by a slash and a DNS label, or just a DNS label.
DNS labels consist of lower-case alphanumeric characters or hyphens,
and must start and end with an alphanumeric character.
DNS subdomain prefixes follow the same rules as DNS labels but can contain periods.
The total length of each name must not exceed 253 characters.</p>
</td>
</tr>
<tr><td><code>sources</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-DeviceClassSourceConfig"><code>[]DeviceClassSourceConfig</code></a>
</td>
<td>
   <p>Sources configures resource accounting sources for this mapping.
Each source defines how quota is tracked for this DeviceClass.
Extended resource requests that resolve to a DeviceClass with sources
configured are marked inadmissible.
Counter sources require KueueDRAIntegrationPartitionableDevices (enabled by default since v0.19).
Capacity sources require KueueDRAIntegrationConsumableCapacity.</p>
</td>
</tr>
</tbody>
</table>

## `DeviceClassSourceConfig`     {#config-kueue-x-k8s-io-v1beta2-DeviceClassSourceConfig}
    

**Appears in:**

- [DeviceClassMapping](#config-kueue-x-k8s-io-v1beta2-DeviceClassMapping)


<p>DeviceClassSourceConfig defines a resource accounting source for a DeviceClassMapping.
Exactly one of the source types must be set per entry.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>counter</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-DeviceClassCounterSource"><code>DeviceClassCounterSource</code></a>
</td>
<td>
   <p>Counter configures counter-based quota for partitionable devices.
Maps a DRA driver counter to the parent DeviceClassMapping's Kueue quota resource.</p>
</td>
</tr>
<tr><td><code>capacity</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-DeviceClassCapacitySource"><code>DeviceClassCapacitySource</code></a>
</td>
<td>
   <p>Capacity configures capacity-based quota for devices that allow
multiple allocations (consumable capacity, KEP-5075).
Maps a device capacity dimension to the parent DeviceClassMapping's Kueue quota resource.
Requires the KueueDRAIntegrationConsumableCapacity feature gate.</p>
</td>
</tr>
</tbody>
</table>

## `FairSharing`     {#config-kueue-x-k8s-io-v1beta2-FairSharing}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>preemptionStrategies</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-PreemptionStrategy"><code>[]PreemptionStrategy</code></a>
</td>
<td>
   <p>preemptionStrategies indicates which constraints should a preemption satisfy.
The preemption algorithm will only use the next strategy in the list if the
incoming workload (preemptor) doesn't fit after using the previous strategies.
AlmostLCA(x, y) is the last but one node on the path from x to the
lowest common ancestor of x and y in the cohort hierarchy (see KEP-1714).
The strategies compare the shares of AlmostLCA(preemptor, preemptee) and
AlmostLCA(preemptee, preemptor). These are the shares of ClusterQueues themselves
only when both ClusterQueues share the same parent Cohort.
Possible values are:</p>
<ul>
<li>LessThanOrEqualToFinalShare: Only preempt a workload if the share of
AlmostLCA(preemptor, preemptee) with the preemptor workload admitted is
less than or equal to the share of AlmostLCA(preemptee, preemptor)
without the workload to be preempted.
This strategy might favor preemption of smaller workloads in the preemptee CQ,
regardless of priority or start time, in an effort to keep the share of AlmostLCA(preemptee, preemptor)
as high as possible.</li>
<li>LessThanInitialShare: Only preempt a workload if the share of
AlmostLCA(preemptor, preemptee) with the preemptor workload admitted is
strictly less than the share of AlmostLCA(preemptee, preemptor) with the
workload to be preempted.
This strategy doesn't depend on the share usage of the workload being preempted.
As a result, the strategy chooses to preempt workloads with the lowest priority and
newest start time first.</li>
</ul>
<p>Only the following lists are supported:</p>
<ul>
<li>[&quot;LessThanOrEqualToFinalShare&quot;]</li>
<li>[&quot;LessThanInitialShare&quot;]</li>
<li>[&quot;LessThanOrEqualToFinalShare&quot;, &quot;LessThanInitialShare&quot;]</li>
</ul>
<p>Any other combination or ordering fails configuration validation.</p>
</td>
</tr>
</tbody>
</table>

## `IncrementalDispatcherConfig`     {#config-kueue-x-k8s-io-v1beta2-IncrementalDispatcherConfig}
    

**Appears in:**

- [MultiKueue](#config-kueue-x-k8s-io-v1beta2-MultiKueue)


<p>IncrementalDispatcherConfig holds configuration for the MultiKueue Incremental Dispatcher.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>stepSize</code><br/>
<code>int32</code>
</td>
<td>
   <p>StepSize defines the number of worker clusters the Incremental Dispatcher
will query simultaneously.
Minimum value is 1. If not set, it defaults to 3.</p>
</td>
</tr>
</tbody>
</table>

## `Integrations`     {#config-kueue-x-k8s-io-v1beta2-Integrations}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>frameworks</code> <B>[Required]</B><br/>
<code>[]string</code>
</td>
<td>
   <p>List of framework names to be enabled.
Possible options:</p>
<ul>
<li>&quot;batch/job&quot;</li>
<li>&quot;kubeflow.org/mpijob&quot;</li>
<li>&quot;ray.io/rayjob&quot;</li>
<li>&quot;ray.io/rayservice&quot;</li>
<li>&quot;ray.io/raycluster&quot;</li>
<li>&quot;jobset.x-k8s.io/jobset&quot;</li>
<li>&quot;kubeflow.org/paddlejob&quot;</li>
<li>&quot;kubeflow.org/pytorchjob&quot;</li>
<li>&quot;kubeflow.org/tfjob&quot;</li>
<li>&quot;kubeflow.org/xgboostjob&quot;</li>
<li>&quot;kubeflow.org/jaxjob&quot;</li>
<li>&quot;trainer.kubeflow.org/trainjob&quot;</li>
<li>&quot;workload.codeflare.dev/appwrapper&quot;</li>
<li>&quot;sparkoperator.k8s.io/sparkapplication&quot;</li>
<li>&quot;pod&quot;</li>
<li>&quot;deployment&quot;</li>
<li>&quot;statefulset&quot;</li>
<li>&quot;leaderworkerset.x-k8s.io/leaderworkerset&quot;</li>
</ul>
</td>
</tr>
<tr><td><code>externalFrameworks</code> <B>[Required]</B><br/>
<code>[]string</code>
</td>
<td>
   <p>List of GroupVersionKinds that are managed for Kueue by external controllers;
the expected format is <code>Kind.version.group.com</code>.</p>
</td>
</tr>
<tr><td><code>labelKeysToCopy</code> <B>[Required]</B><br/>
<code>[]string</code>
</td>
<td>
   <p>labelKeysToCopy is a list of label keys that should be copied from the job into the
workload object. It is not required for the job to have all the labels from this
list. If a job does not have some label with the given key from this list, the
constructed workload object will be created without this label. In the case
of creating a workload from a composable job (pod group), if multiple objects
have labels with some key from the list, the values of these labels must
match or otherwise the workload creation would fail. The labels are copied only
during the workload creation and are not updated even if the labels of the
underlying job are changed.</p>
</td>
</tr>
</tbody>
</table>

## `InternalCertManagement`     {#config-kueue-x-k8s-io-v1beta2-InternalCertManagement}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>enable</code> <B>[Required]</B><br/>
<code>bool</code>
</td>
<td>
   <p>Enable controls the use of internal cert management for the webhook,
metrics and visibility endpoints.
When enabled Kueue is using libraries to generate and
self-sign the certificates.
When disabled, you need to provide the certificates for
the webhooks, metrics and visibility through a third party certificate
This secret is mounted to the kueue controller manager pod. The mount
path for webhooks is /tmp/k8s-webhook-server/serving-certs, for
metrics endpoint the expected path is <code>/etc/kueue/metrics/certs</code> and for
visibility endpoint the expected path is <code>/visibility</code>.
The keys and certs are named tls.key and tls.crt.</p>
</td>
</tr>
<tr><td><code>webhookServiceName</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>WebhookServiceName is the name of the Service used as part of the DNSName.
Defaults to kueue-webhook-service.</p>
</td>
</tr>
<tr><td><code>webhookSecretName</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>WebhookSecretName is the name of the Secret used to store CA and server certs.
Defaults to kueue-webhook-server-cert.</p>
</td>
</tr>
</tbody>
</table>

## `LocalQueueMetrics`     {#config-kueue-x-k8s-io-v1beta2-LocalQueueMetrics}
    

**Appears in:**

- [ControllerMetrics](#config-kueue-x-k8s-io-v1beta2-ControllerMetrics)


<p>LocalQueueMetrics defines the configuration options for local queue metrics.
If left empty, then metrics will expose for all local queues across namespaces.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>enable</code><br/>
<code>bool</code>
</td>
<td>
   <p>Enable is a knob to allow metrics to be exposed for local queues. Defaults to true.</p>
</td>
</tr>
<tr><td><code>localQueueSelector</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#labelselector-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.LabelSelector</code></a>
</td>
<td>
   <p>LocalQueueSelector can be used to choose the local queues that need metrics to be collected.</p>
</td>
</tr>
</tbody>
</table>

## `MultiKueue`     {#config-kueue-x-k8s-io-v1beta2-MultiKueue}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>gcInterval</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>GCInterval defines the time interval between two consecutive garbage collection runs.
Defaults to 1min. If 0, the garbage collection is disabled.</p>
</td>
</tr>
<tr><td><code>origin</code><br/>
<code>string</code>
</td>
<td>
   <p>Origin defines a label value used to track the creator of workloads in the worker
clusters.
This is used by multikueue in components like its garbage collector to identify
remote objects that ware created by this multikueue manager cluster and delete
them if their local counterpart no longer exists.</p>
</td>
</tr>
<tr><td><code>workerLostTimeout</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>WorkerLostTimeout defines the time a local workload's multikueue admission check state is kept Ready
if the connection with its reserving worker cluster is lost.</p>
<p>Defaults to 15 minutes.</p>
</td>
</tr>
<tr><td><code>dispatcherName</code><br/>
<code>string</code>
</td>
<td>
   <p>DispatcherName defines the dispatcher responsible for selecting worker clusters to handle the workload.</p>
<ul>
<li>If specified, the workload will be handled by the named dispatcher.</li>
<li>If not specified, the workload will be handled by the default (&quot;kueue.x-k8s.io/multikueue-dispatcher-all-at-once&quot;) dispatcher.</li>
</ul>
</td>
</tr>
<tr><td><code>externalFrameworks</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-MultiKueueExternalFramework"><code>[]MultiKueueExternalFramework</code></a>
</td>
<td>
   <p>ExternalFrameworks defines a list of external frameworks that should be supported
by the generic MultiKueue adapter. Each entry defines how to handle a specific
GroupVersionKind (GVK) for MultiKueue operations.</p>
</td>
</tr>
<tr><td><code>clusterProfile</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ClusterProfile"><code>ClusterProfile</code></a>
</td>
<td>
   <p>ClusterProfile defines configuration for using the ClusterProfile API.</p>
</td>
</tr>
<tr><td><code>incrementalDispatcherConfig</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-IncrementalDispatcherConfig"><code>IncrementalDispatcherConfig</code></a>
</td>
<td>
   <p>IncrementalDispatcherConfig contains the configuration for the incremental dispatcher.
This field is only valid when DispatcherName is set to the incremental dispatcher.
Note: This field is going to be ignored when the MultiKueueIncrementalDispatcherConfig feature gate is disabled.</p>
</td>
</tr>
</tbody>
</table>

## `MultiKueueExternalFramework`     {#config-kueue-x-k8s-io-v1beta2-MultiKueueExternalFramework}
    

**Appears in:**

- [MultiKueue](#config-kueue-x-k8s-io-v1beta2-MultiKueue)


<p>MultiKueueExternalFramework defines a framework that is not built-in.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>name</code> <B>[Required]</B><br/>
<code>string</code>
</td>
<td>
   <p>Name is the GVK of the resource that are
managed by external controllers
the expected format is <code>kind.version.group</code>.</p>
</td>
</tr>
</tbody>
</table>

## `ObjectRetentionPolicies`     {#config-kueue-x-k8s-io-v1beta2-ObjectRetentionPolicies}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)


<p>ObjectRetentionPolicies holds retention settings for different object types.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>workloads</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-WorkloadRetentionPolicy"><code>WorkloadRetentionPolicy</code></a>
</td>
<td>
   <p>Workloads configures retention for Workloads.
A nil value disables automatic deletion of Workloads.</p>
</td>
</tr>
</tbody>
</table>

## `PreemptionStrategy`     {#config-kueue-x-k8s-io-v1beta2-PreemptionStrategy}
    
(Alias of `string`)

**Appears in:**

- [FairSharing](#config-kueue-x-k8s-io-v1beta2-FairSharing)





## `QuotaCheckStrategy`     {#config-kueue-x-k8s-io-v1beta2-QuotaCheckStrategy}
    
(Alias of `string`)

**Appears in:**

- [Resources](#config-kueue-x-k8s-io-v1beta2-Resources)


<p>QuotaCheckStrategy determines how Kueue checks resources against quota
during admission.</p>




## `RequeuingStrategy`     {#config-kueue-x-k8s-io-v1beta2-RequeuingStrategy}
    

**Appears in:**

- [WaitForPodsReady](#config-kueue-x-k8s-io-v1beta2-WaitForPodsReady)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>timestamp</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-RequeuingTimestamp"><code>RequeuingTimestamp</code></a>
</td>
<td>
   <p>Timestamp defines the timestamp used for re-queuing a Workload
that was evicted due to Pod readiness. The possible values are:</p>
<ul>
<li><code>Eviction</code> (default) indicates from Workload <code>Evicted</code> condition with <code>PodsReadyTimeout</code> reason.</li>
<li><code>Creation</code> indicates from Workload .metadata.creationTimestamp.</li>
</ul>
</td>
</tr>
<tr><td><code>backoffLimitCount</code><br/>
<code>int32</code>
</td>
<td>
   <p>BackoffLimitCount defines the maximum number of re-queuing retries.
Once the number is reached, the workload is deactivated (<code>.spec.activate</code>=<code>false</code>).
When it is null, the workloads will repeatedly and endless re-queueing.</p>
<p>Every backoff duration is about &quot;b*2^(n-1)+Rand&quot; where:</p>
<ul>
<li>&quot;b&quot; represents the base set by &quot;BackoffBaseSeconds&quot; parameter,</li>
<li>&quot;n&quot; represents the &quot;workloadStatus.requeueState.count&quot;,</li>
<li>&quot;Rand&quot; represents the random jitter.
During this time, the workload is taken as an inadmissible and
other workloads will have a chance to be admitted.
By default, the consecutive requeue delays are around: (60s, 120s, 240s, ...).</li>
</ul>
<p>Defaults to null.</p>
</td>
</tr>
<tr><td><code>backoffBaseSeconds</code><br/>
<code>int32</code>
</td>
<td>
   <p>BackoffBaseSeconds defines the base for the exponential backoff for
re-queuing an evicted workload.</p>
<p>Defaults to 60.</p>
</td>
</tr>
<tr><td><code>backoffMaxSeconds</code><br/>
<code>int32</code>
</td>
<td>
   <p>BackoffMaxSeconds defines the maximum backoff time to re-queue an evicted workload.</p>
<p>Defaults to 3600.</p>
</td>
</tr>
</tbody>
</table>

## `RequeuingTimestamp`     {#config-kueue-x-k8s-io-v1beta2-RequeuingTimestamp}
    
(Alias of `string`)

**Appears in:**

- [RequeuingStrategy](#config-kueue-x-k8s-io-v1beta2-RequeuingStrategy)





## `ResourceTransformation`     {#config-kueue-x-k8s-io-v1beta2-ResourceTransformation}
    

**Appears in:**

- [Resources](#config-kueue-x-k8s-io-v1beta2-Resources)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>input</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#resourcename-v1-core"><code>k8s.io/api/core/v1.ResourceName</code></a>
</td>
<td>
   <p>Input is the name of the input resource.
It must not be <code>pods</code>; that exact name is reserved for Kueue's internal
Pod-count accounting. A qualified name such as <code>example.com/pods</code> is allowed.
Disabling the ReservedResourceNameValidation feature gate lets such a
configuration load for an upgrade; flavor assignment still overwrites the
key with the PodSet count.</p>
</td>
</tr>
<tr><td><code>strategy</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ResourceTransformationStrategy"><code>ResourceTransformationStrategy</code></a>
</td>
<td>
   <p>Strategy specifies if the input resource should be replaced or retained.
Defaults to Retain</p>
</td>
</tr>
<tr><td><code>multiplyBy</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#resourcename-v1-core"><code>k8s.io/api/core/v1.ResourceName</code></a>
</td>
<td>
   <p>MultiplyBy indicates the resource name requested by a workload, if
specified.
The requested amount of the resource is used to multiply the requested
amount of the resource indicated by the &quot;input&quot; field when computing
&quot;outputs&quot;. It does not change the quantity retained under &quot;input&quot; when
&quot;strategy&quot; is Retain.
It must not be <code>pods</code>; that exact name is reserved for Kueue's internal
Pod-count accounting. A qualified name such as <code>example.com/pods</code> is allowed.
Disabling the ReservedResourceNameValidation feature gate lets such a
configuration load for an upgrade; flavor assignment still overwrites the
key with the PodSet count.</p>
</td>
</tr>
<tr><td><code>outputs</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#resourcelist-v1-core"><code>k8s.io/api/core/v1.ResourceList</code></a>
</td>
<td>
   <p>Outputs specifies the output resources and quantities per unit of input resource.
An output resource name must not be <code>pods</code>; that exact name is reserved for
Kueue's internal Pod-count accounting. A qualified name such as
<code>example.com/pods</code> is allowed.
Disabling the ReservedResourceNameValidation feature gate lets such a
configuration load for an upgrade; flavor assignment still overwrites the
key with the PodSet count.
An empty Outputs combined with a <code>Replace</code> Strategy causes the Input resource to be ignored by Kueue.</p>
</td>
</tr>
</tbody>
</table>

## `ResourceTransformationStrategy`     {#config-kueue-x-k8s-io-v1beta2-ResourceTransformationStrategy}
    
(Alias of `string`)

**Appears in:**

- [ResourceTransformation](#config-kueue-x-k8s-io-v1beta2-ResourceTransformation)





## `Resources`     {#config-kueue-x-k8s-io-v1beta2-Resources}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>quotaCheckStrategy</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-QuotaCheckStrategy"><code>QuotaCheckStrategy</code></a>
</td>
<td>
   <p>QuotaCheckStrategy determines which resources are considered during quota admission.</p>
</td>
</tr>
<tr><td><code>excludeResourcePrefixes</code> <B>[Required]</B><br/>
<code>[]string</code>
</td>
<td>
   <p>ExcludedResourcePrefixes defines which resources should be ignored by Kueue</p>
</td>
</tr>
<tr><td><code>transformations</code> <B>[Required]</B><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-ResourceTransformation"><code>[]ResourceTransformation</code></a>
</td>
<td>
   <p>Transformations defines how to transform PodSpec resources into Workload resource requests.
This is intended to be a map with Input as the key (enforced by validation code)</p>
</td>
</tr>
<tr><td><code>deviceClassMappings</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-DeviceClassMapping"><code>[]DeviceClassMapping</code></a>
</td>
<td>
   <p>DeviceClassMappings defines mappings from device classes to logical resources
for Dynamic Resource Allocation support.</p>
</td>
</tr>
</tbody>
</table>

## `SourceKind`     {#config-kueue-x-k8s-io-v1beta2-SourceKind}
    
(Alias of `string`)

**Appears in:**

- [ControllerMetricsCustomLabel](#config-kueue-x-k8s-io-v1beta2-ControllerMetricsCustomLabel)





## `TLSOptions`     {#config-kueue-x-k8s-io-v1beta2-TLSOptions}
    

**Appears in:**

- [ControllerManager](#config-kueue-x-k8s-io-v1beta2-ControllerManager)


<p>TLSOptions defines TLS security settings for Kueue servers</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>minVersion</code><br/>
<code>string</code>
</td>
<td>
   <p>minVersion is the minimum TLS version supported.
Values are from tls package constants (https://golang.org/pkg/crypto/tls/#pkg-constants).
This field is only valid when TLSOptions is set to true.
The default would be to not set this value and inherit golang settings.</p>
</td>
</tr>
<tr><td><code>cipherSuites</code><br/>
<code>[]string</code>
</td>
<td>
   <p>cipherSuites is the list of allowed cipher suites for the server.
Note that TLS 1.3 ciphersuites are not configurable.
Values are from tls package constants (https://golang.org/pkg/crypto/tls/#pkg-constants).
The default would be to not set this value and inherit golang settings.</p>
</td>
</tr>
<tr><td><code>curvePreferences</code><br/>
<code>[]int32</code>
</td>
<td>
   <p>curvePreferences is the list of allowed TLS key exchange mechanisms (curves)
for the server, specified as numeric IANA TLS Supported Group IDs.
See https://pkg.go.dev/crypto/tls#CurveID for values supported by the current Go version.
If omitted, Go defaults are used.</p>
</td>
</tr>
</tbody>
</table>

## `VisibilityServerConfiguration`     {#config-kueue-x-k8s-io-v1beta2-VisibilityServerConfiguration}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)



<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>bindAddress</code><br/>
<code>string</code>
</td>
<td>
   <p>BindAddress is the IP address the visibility server listens on.
Defaults to 0.0.0.0 (all network interfaces).</p>
</td>
</tr>
<tr><td><code>bindPort</code><br/>
<code>int32</code>
</td>
<td>
   <p>BindPort is the port the visibility server listens on.
Defaults to 8082.</p>
</td>
</tr>
</tbody>
</table>

## `WaitForPodsReady`     {#config-kueue-x-k8s-io-v1beta2-WaitForPodsReady}
    

**Appears in:**

- [Configuration](#config-kueue-x-k8s-io-v1beta2-Configuration)


<p>WaitForPodsReady defines configuration for the Wait For Pods Ready feature,
which is used to ensure that all Pods are ready within the specified time.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>timeout</code> <B>[Required]</B><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>Timeout defines the time for an admitted workload to reach the
PodsReady=true condition. When the timeout is exceeded, the workload
evicted and requeued in the same cluster queue.</p>
</td>
</tr>
<tr><td><code>blockAdmission</code><br/>
<code>bool</code>
</td>
<td>
   <p>BlockAdmission when true, Kueue blocks admission of all workloads across
all ClusterQueues until every previously-admitted workload reaches the
PodsReady=true condition.
Defaults to false.</p>
</td>
</tr>
<tr><td><code>requeuingStrategy</code><br/>
<a href="#config-kueue-x-k8s-io-v1beta2-RequeuingStrategy"><code>RequeuingStrategy</code></a>
</td>
<td>
   <p>RequeuingStrategy defines the strategy for requeuing a Workload.</p>
</td>
</tr>
<tr><td><code>recoveryTimeout</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>RecoveryTimeout defines a timeout, measured since the
last transition to the PodsReady=false condition after a Workload is Admitted and running.
Such a transition may happen when a Pod failed and the replacement Pod
is awaited to be scheduled.
After exceeding the timeout the corresponding job gets suspended again
and requeued after the backoff delay.
Defaults to the value of timeout. Setting to &quot;0s&quot; disables recovery timeout checking.</p>
</td>
</tr>
<tr><td><code>unscheduledTimeout</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>UnscheduledTimeout defines a timeout, measured since the transition to the
Admitted=True condition, for all the Pods required by the admission to be
scheduled or to have succeeded. The deadline never exceeds timeout since
admission. Exceeding it evicts the Workload with the PodsReadyTimeout reason
and requeues it after the backoff delay.
A current-admission PodsScheduled=False observation is required for eviction;
a late observation does not restart the timeout.
Must be non-negative and must not exceed timeout. When unset or &quot;0s&quot;, scheduling
tracking, readiness propagation, scheduling timeouts and scheduling-history resets are disabled.
Requires the WaitForPodsReadyUnscheduledTimeout feature gate, even for &quot;0s&quot;.
Enabling this gate together with DisableWaitForPodsReady is rejected.</p>
</td>
</tr>
<tr><td><code>maxTimeoutOnWorkload</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>MaxTimeoutOnWorkload defines the upper bound allowed for a per-workload
PodsReady timeoutSeconds and recoveryTimeoutSeconds override (set via the <code>kueue.x-k8s.io/wait-for-pods-ready</code>
annotation). If a workload requests a timeoutSeconds or recoveryTimeoutSeconds greater than
MaxTimeoutOnWorkload, the job is rejected by the admission webhook.
When unset, the default maximum of 2 hours is enforced.
It has no effect on workloads that don't set a per-workload override.</p>
</td>
</tr>
</tbody>
</table>

## `WorkloadRetentionPolicy`     {#config-kueue-x-k8s-io-v1beta2-WorkloadRetentionPolicy}
    

**Appears in:**

- [ObjectRetentionPolicies](#config-kueue-x-k8s-io-v1beta2-ObjectRetentionPolicies)


<p>WorkloadRetentionPolicy defines the policies for when Workloads should be deleted.</p>


<table class="table">
<thead><tr><th width="30%">Field</th><th>Description</th></tr></thead>
<tbody>
    
  
<tr><td><code>afterFinished</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>AfterFinished is the duration to wait after a Workload finishes
before deleting it.
A duration of 0 will delete immediately.
A nil value disables automatic deletion.
Represented using metav1.Duration (e.g. &quot;10m&quot;, &quot;1h30m&quot;).</p>
</td>
</tr>
<tr><td><code>afterDeactivatedByKueue</code><br/>
<a href="https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.28/#duration-v1-meta"><code>k8s.io/apimachinery/pkg/apis/meta/v1.Duration</code></a>
</td>
<td>
   <p>AfterDeactivatedByKueue is the duration to wait after <em>any</em> Kueue-managed Workload
(such as a Job, JobSet, or other custom workload types) has been marked
as deactivated by Kueue before automatically deleting it.
Deletion of deactivated workloads may cascade to objects not created by
Kueue, since deleting the parent Workload owner (e.g. JobSet) can trigger
garbage-collection of dependent resources.
A duration of 0 will delete immediately.
A nil value disables automatic deletion.
Represented using metav1.Duration (e.g. &quot;10m&quot;, &quot;1h30m&quot;).</p>
</td>
</tr>
</tbody>
</table>
  